--- a/playbooks/roles/home.ijj.li/tasks/wireguard.yml
+++ b/playbooks/roles/home.ijj.li/tasks/wireguard.yml
@@ -50,7 +50,7 @@
         dest: "/usr/bin/"
         mode: "755"
     - name: "Copy wg1 systemd unit"
-      template:
+      copy:
         src: "wireguard/net-wg1.service"
         dest: "{{systemd_unit_dir}}"
         mode: "644"
