--- a/playbooks/roles/home.ijj.li_git/tasks/deploy.yml
+++ b/playbooks/roles/home.ijj.li_git/tasks/deploy.yml
@@ -1,8 +1,6 @@
-# Deploys Gitolite as a Podman pod
-#
 # Read-only/capability/user precautions are relaxed out of convenience, but should probably be tightened.
 ---
-- name: "Deploy git pod"
+- name: "Deploy pod"
   import_role:
     name: podman
   vars:
