--- a/playbooks/roles/home.ijj.li_web/tasks/deploy.yml
+++ b/playbooks/roles/home.ijj.li_web/tasks/deploy.yml
@@ -1,10 +1,6 @@
-# Deploys a reverse proxy and all the web services that go through it:
-#
-#   - Nextcloud
-#
 # Read-only/capability/user precautions are relaxed out of convenience, but should probably be tightened.
 ---
-- name: "Deploy web pod"
+- name: "Deploy pod"
   import_role:
     name: podman
   vars:
