Add Prometheus and Grafana monitoring; upgrade to Nextcloud 20

--- a/playbooks/home.ijj.li_services.yml
+++ b/playbooks/home.ijj.li_services.yml
@@ -5,6 +5,7 @@
 - import_playbook: home.ijj.li_services_factorio.yml
 - import_playbook: home.ijj.li_services_git.yml
 - import_playbook: home.ijj.li_services_mediaserver.yml
+- import_playbook: home.ijj.li_services_monitoring.yml
 - import_playbook: home.ijj.li_services_sync.yml
 - import_playbook: home.ijj.li_services_torrent.yml
 - import_playbook: home.ijj.li_services_unifi.yml
