--- a/requirements.yml
+++ b/requirements.yml
@@ -2,6 +2,8 @@
 collections:
   - ansible.posix
   - community.crypto
+  # Just to fix error from cloudalchemy.node-exporter trying to use "seport" module
+  - community.general
 
 roles:
   - src: cloudalchemy.node-exporter
