--- a/playbooks/roles/home.ijj.li_sync/tasks/deploy.yml
+++ b/playbooks/roles/home.ijj.li_sync/tasks/deploy.yml
@@ -6,9 +6,7 @@
     user: "{{service_user}}"
     group: "{{service_group}}"
     pod_name: sync
-    pod_create_args: "
-      -p 8384:8384/tcp \
-      -p 22000:22000/tcp"
+    pod_create_args: "--network host"
     pod_uid: "1"
     pod_gid: "1"
     pod_containers:
@@ -31,3 +29,4 @@
     expose_ports:
       - 8384/tcp
       - 22000/tcp
+      - 22000/udp
