home.ijj.li: Lock MariaDB to 10.5 to resolve Nextcloud issue
See https://help.nextcloud.com/t/update-to-next-cloud-21-0-2-has-get-an-error/117028/13

--- a/playbooks/roles/home.ijj.li_web/tasks/deploy.yml
+++ b/playbooks/roles/home.ijj.li_web/tasks/deploy.yml
@@ -21,7 +21,7 @@
           -v {{host_data_dir}}/rproxy/config:/config \
           -v {{host_data_dir}}/rproxy/data:/data"
       - name: nextcloud-mariadb
-        image: docker.io/mariadb
+        image: docker.io/mariadb:10.5
         run_args: "\
           -v {{host_data_dir}}/nextcloud-mariadb:/var/lib/mysql"
         cmd_args: "\
